--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "cross-env NODE_ENV=DEVELOPMENT nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "cross-env NODE_ENV=PRODUCTION node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^7.1.1",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
